# triangulate

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
benches/: standard.rs
resources/geometry/: README.md
resources/geometry/countries/: afghanistan.txt  aland.txt  albania.txt  algeria.txt  american_samoa.txt  andorra.txt  angola.txt  anguilla.txt  antarctica.txt  antigua_and_barbuda.txt  argentina.txt  armenia.txt  aruba.txt  ashmore_and_cartier_islands.txt  australia.txt  austria.txt  azerbaijan.txt  bahrain.txt  bangladesh.txt  barbados.txt  belarus.txt  belgium.txt  belize.txt  benin.txt  bermuda.txt  bhutan.txt  bolivia.txt  bosnia_and_herzegovina.txt  botswana.txt  brazil.txt  british_indian_ocean_territory.txt  british_virgin_islands.txt  bulgaria.txt  burkina_faso.txt  burundi.txt  cabo_verde.txt  cambodia.txt  cameroon.txt  cayman_islands.txt  central_african_republic.txt  (+196 more)
src/: errors.rs  fan_builder_state.rs  idx.rs  lib.rs  mappable.rs  math.rs  monotone.rs  nexus.rs  querynode.rs  segment.rs  trapezoid.rs  trapezoidation.rs
src/debug/: env.rs  mod.rs  svg.rs
src/inputs/: mod.rs  polygon.rs  polygon_list.rs  vertex.rs  vertex_index.rs
src/outputs/: fan.rs  fan_builder.rs  fan_format.rs  list.rs  list_builder.rs  list_format.rs  mod.rs  triangle_winding.rs
src/outputs/builders/: fan_to_list_adapter.rs  mod.rs  vec_delimited_indexed_fan_builder.rs  vec_indexed_list_builder.rs  vec_list_builder.rs  vec_vec_fan_builder.rs  vec_vec_indexed_fan_builder.rs
src/outputs/formats/: deindexed_fan.rs  deindexed_list.rs  delimited_fan.rs  fan_to_list.rs  generic_fans.rs  generic_list.rs  indexed_fan.rs  indexed_list.rs  mod.rs  reverse_fan.rs
src/tests/: builder.rs  format.rs  mod.rs  negative.rs  regression.rs  triangulate.rs
src/tests/util/: load_polygon_list.rs  mod.rs  polygon.rs  vtest.rs
